force-app/main/default/objects/CIF__c/CIF__c.object-meta.xml
<CustomObject>
    <label>CIF</label>
    <nameField>
        <displayFormat>CIF-{00000}</displayFormat>
        <label>CIF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIF</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>