force-app/main/default/objects/CIF__c/fields/Agency_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Agency_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agency Buyer</label>
    <type>Checkbox</type>
</CustomField>