force-app/main/default/objects/CIF__c/fields/B2B_Agent__c.field-meta.xml
<CustomField>
    <fullName>B2B_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CIF (B2B Agent)</relationshipLabel>
    <relationshipName>CIF2</relationshipName>
    <type>Lookup</type>
</CustomField>