force-app/main/default/objects/CIF__c/fields/CIF_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>CIF_Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Walkin</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>3rd Party Agency</fullName>
            </value>
            <value>
                <fullName>Sales Centre</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Personal Contact</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>Cityscape</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Auction House</fullName>
            </value>
            <value>
                <fullName>Arts Night 2024</fullName>
            </value>
            <value>
                <fullName>F1 Jeddah 2024</fullName>
            </value>
            <value>
                <fullName>Paid Programmatic Ads</fullName>
            </value>
            <value>
                <fullName>Solidere Newsletter</fullName>
            </value>
            <value>
                <fullName>Jeddah Airport</fullName>
            </value>
            <value>
                <fullName>Mecca Clock Tower</fullName>
            </value>
            <value>
                <fullName>Sotheby&apos;s Auction House Saudi</fullName>
            </value>
            <value>
                <fullName>Postcards</fullName>
            </value>
            <value>
                <fullName>Nobu Website</fullName>
            </value>
            <value>
                <fullName>Riyadh Sales Center</fullName>
            </value>
            <value>
                <fullName>Referred by Existing client</fullName>
            </value>
            <value>
                <fullName>Existing Lead - Ongoing relationship</fullName>
            </value>
            <value>
                <fullName>SIR Management</fullName>
            </value>
            <value>
                <fullName>Baccarat Launch Event</fullName>
            </value>
            <value>
                <fullName>sothebysrealty.ae - Direct Traffic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>