force-app/main/default/objects/CIF__c/fields/CIF_Project_Admin__c.field-meta.xml
<CustomField>
    <fullName>CIF_Project_Admin__c</fullName>
    <formula>Project__r.Project_Admin__r.FirstName &amp; &quot; &quot; &amp; Project__r.Project_Admin__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIF Project Admin</label>
    <type>Text</type>
</CustomField>