force-app/main/default/objects/CIF__c/fields/CIF_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>CIF_Sub_Type__c</fullName>
    <label>CIF Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Ownership</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
            <value>
                <fullName>Search Agent</fullName>
            </value>
            <value>
                <fullName>Receiver</fullName>
            </value>
            <value>
                <fullName>Postcards to Lead Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>