force-app/main/default/objects/CIF__c/fields/CIF_Type__c.field-meta.xml
<CustomField>
    <fullName>CIF_Type__c</fullName>
    <label>CIF Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGENCY BRIEFING</fullName>
            </value>
            <value>
                <fullName>AGENCY BUYER</fullName>
            </value>
            <value>
                <fullName>DIRECT BUYER</fullName>
            </value>
            <value>
                <fullName>CONTACT REQUEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>