force-app/main/default/objects/CIF__c/fields/Client_Agent__c.field-meta.xml
<CustomField>
    <fullName>Client_Agent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CIF</relationshipLabel>
    <relationshipName>CIF</relationshipName>
    <type>Lookup</type>
</CustomField>