force-app/main/default/objects/CIF__c/fields/CONTACT_TICK__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_TICK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CONTACT TICK</label>
    <type>Checkbox</type>
</CustomField>