force-app/main/default/objects/CIF__c/fields/Create_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Create_Inquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Inquiry</label>
    <type>Checkbox</type>
</CustomField>