force-app/main/default/objects/CIF__c/fields/Direct_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Direct_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Buyer</label>
    <type>Checkbox</type>
</CustomField>