force-app/main/default/objects/CIF__c/fields/E_MAIL__c.field-meta.xml
<CustomField>
    <fullName>E_MAIL__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>