force-app/main/default/objects/CIF__c/fields/Generated_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Generated_User_Profile__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generated User Profile</label>
    <type>Text</type>
</CustomField>