force-app/main/default/objects/CIF__c/fields/How_Would_You_Like_Us_To_Contact_You__c.field-meta.xml
<CustomField>
    <fullName>How_Would_You_Like_Us_To_Contact_You__c</fullName>
    <label>How Would You Like Us To Contact You?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Email</fullName>
            </value>
            <value>
                <fullName>By Phone</fullName>
            </value>
            <value>
                <fullName>By Fax</fullName>
                <isActive>false</isActive>
                <label>By Fax</label>
            </value>
            <value>
                <fullName>By Post</fullName>
                <isActive>false</isActive>
                <label>By Post</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>