force-app/main/default/objects/CIF__c/fields/Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Inquiry__c</fullName>
    <formula>IF (NOT(ISBLANK(Requested_Inquiry_Id__c)),HYPERLINK(&quot;/&quot; &amp;  Requested_Inquiry_Id__c ,  NAME_OF_THE_OWNER__c ),&apos;NA&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inquiry</label>
    <type>Text</type>
</CustomField>