force-app/main/default/objects/CIF__c/fields/JOINT_OWNER__c.field-meta.xml
<CustomField>
    <fullName>JOINT_OWNER__c</fullName>
    <label>JOINT OWNER</label>
    <length>18</length>
    <type>Text</type>
</CustomField>