force-app/main/default/objects/CIF__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walkin</fullName>
            </value>
            <value>
                <fullName>3rd Party Agency</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Sales Centre</fullName>
            </value>
            <value>
                <fullName>Agent Internal Referral</fullName>
            </value>
            <value>
                <fullName>CCE - Did not probe</fullName>
            </value>
            <value>
                <fullName>Client doenst want to provide</fullName>
            </value>
            <value>
                <fullName>Commversion</fullName>
            </value>
            <value>
                <fullName>Crimtan</fullName>
            </value>
            <value>
                <fullName>DIFC Office - Walkin</fullName>
            </value>
            <value>
                <fullName>Dubizzle</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>External Agent Referral</fullName>
            </value>
            <value>
                <fullName>Four Season Sales centre</fullName>
            </value>
            <value>
                <fullName>Four seasons Retail</fullName>
            </value>
            <value>
                <fullName>GSIR - Edm</fullName>
            </value>
            <value>
                <fullName>GSIR - Events &amp; Road Shows</fullName>
            </value>
            <value>
                <fullName>GSIR - Facebook</fullName>
            </value>
            <value>
                <fullName>GSIR - Instagram</fullName>
            </value>
            <value>
                <fullName>GSIR - Instapage</fullName>
            </value>
            <value>
                <fullName>GSIR - LinkedIn</fullName>
            </value>
            <value>
                <fullName>GSIR - Magazine</fullName>
            </value>
            <value>
                <fullName>GSIR - YouTube</fullName>
            </value>
            <value>
                <fullName>GulfSIR.com</fullName>
            </value>
            <value>
                <fullName>Gulf SIR Kiosk</fullName>
            </value>
            <value>
                <fullName>Hash Digital</fullName>
            </value>
            <value>
                <fullName>Inbound Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>