force-app/main/default/objects/CIF__c/fields/Mobile_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country_Code__c</fullName>
    <label>Mobile Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mobile_Country_Code</valueSetName>
    </valueSet>
</CustomField>