force-app/main/default/objects/CIF__c/fields/Porter_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Porter_Email_Id__c</fullName>
    <label>Porter Email</label>
    <type>Email</type>
</CustomField>