force-app/main/default/objects/CIF__c/fields/Porter_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Porter_Mobile_Number__c</fullName>
    <label>Porter Mobile Number</label>
    <type>Phone</type>
</CustomField>