force-app/main/default/objects/CIF__c/fields/Porter_Name__c.field-meta.xml
<CustomField>
    <fullName>Porter_Name__c</fullName>
    <label>Porter Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>