force-app/main/default/objects/CIF__c/fields/Preferred_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Payment_Method__c</fullName>
    <label>Preferred Payment Method?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>