force-app/main/default/objects/CIF__c/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <label>Primary Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>