force-app/main/default/objects/CIF__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>CD_Project__c</referenceTo>
    <relationshipLabel>CIFs</relationshipLabel>
    <relationshipName>CIFs</relationshipName>
    <type>Lookup</type>
</CustomField>