force-app/main/default/objects/CIF__c/fields/Project_Admin__c.field-meta.xml
<CustomField>
    <fullName>Project_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CIF1</relationshipName>
    <type>Lookup</type>
</CustomField>