force-app/main/default/objects/CIF__c/fields/Project_Admin_Team_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_Admin_Team_Email__c</fullName>
    <label>Project Admin Team Email</label>
    <type>Email</type>
</CustomField>