force-app/main/default/objects/CIF__c/fields/Project_Approver__c.field-meta.xml
<CustomField>
    <fullName>Project_Approver__c</fullName>
    <formula>Project__r.Project_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Approver</label>
    <type>Text</type>
</CustomField>