force-app/main/default/objects/CIF__c/fields/Public_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Public_Form_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Form Submitted</label>
    <type>Checkbox</type>
</CustomField>