force-app/main/default/objects/CIF__c/fields/Request_To_Create__c.field-meta.xml
<CustomField>
    <fullName>Request_To_Create__c</fullName>
    <label>Request To Create</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Only</fullName>
            </value>
            <value>
                <fullName>Inquiry Only</fullName>
            </value>
            <value>
                <fullName>Contact &amp; Inquiry Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>