force-app/main/default/objects/CIF__c/fields/Requested_Inquiry_Id__c.field-meta.xml
<CustomField>
    <fullName>Requested_Inquiry_Id__c</fullName>
    <label>Requested Inquiry Id</label>
    <type>TextArea</type>
</CustomField>