force-app/main/default/objects/CIF__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <label>Resident</label>
    <type>TextArea</type>
</CustomField>