force-app/main/default/objects/CIF__c/fields/Sharing_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Sub_Region__c</fullName>
    <label>Sharing Sub Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sharing_Sub_Region</valueSetName>
    </valueSet>
</CustomField>