force-app/main/default/objects/CIF__c/fields/Sub_Community__c.field-meta.xml
<CustomField>
    <fullName>Sub_Community__c</fullName>
    <formula>Project__r.Sub_Community__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Community</label>
    <type>Text</type>
</CustomField>