force-app/main/default/objects/CIF__c/fields/Third_Party_Agency_Client__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Agency_Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CIF (3rd Party Agency Client)</relationshipLabel>
    <relationshipName>CIF1</relationshipName>
    <type>Lookup</type>
</CustomField>