force-app/main/default/objects/CIF__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CD_Property__c.CD_Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CD_Property__c</referenceTo>
    <relationshipLabel>CIF</relationshipLabel>
    <relationshipName>CIF</relationshipName>
    <type>Lookup</type>
</CustomField>