force-app/main/default/objects/CIF__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 BR</fullName>
            </value>
            <value>
                <fullName>2 BR</fullName>
            </value>
            <value>
                <fullName>3 BR</fullName>
            </value>
            <value>
                <fullName>4 BR</fullName>
            </value>
            <value>
                <fullName>5 BR</fullName>
            </value>
            <value>
                <fullName>6 BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>