force-app/main/default/objects/CIF__c/fields/x3rd_Party_Agency__c.field-meta.xml
<CustomField>
    <fullName>x3rd_Party_Agency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>3rd Party Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CIF</relationshipLabel>
    <relationshipName>CIF</relationshipName>
    <type>Lookup</type>
</CustomField>