force-app/main/default/objects/CIF__c/fields/X3rd_Party_Agency_Email__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Agency_Email__c</fullName>
    <label>3rd Party Agency Email</label>
    <type>Email</type>
</CustomField>