force-app/main/default/objects/CIF__c/fields/x3rd_Party_Agency_Rera_Number__c.field-meta.xml
<CustomField>
    <fullName>x3rd_Party_Agency_Rera_Number__c</fullName>
    <label>3rd Party Agency Rera Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>