force-app/main/default/objects/CIF__c/fields/x3rd_Party_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>x3rd_Party_Agent_Email__c</fullName>
    <label>3rd Party Agent Email</label>
    <type>Email</type>
</CustomField>