force-app/main/default/objects/CIF__c/fields/x3rd_Party_Agent_Mobile__c.field-meta.xml
<CustomField>
    <fullName>x3rd_Party_Agent_Mobile__c</fullName>
    <label>3rd Party Agent Mobile</label>
    <type>Phone</type>
</CustomField>