force-app/main/default/objects/CIF__c/fields/x3rd_Party_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>x3rd_Party_Agent_Name__c</fullName>
    <label>3rd Party Agent Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>