force-app/main/default/objects/CIF__c/validationRules/ClientAgent_field_is_Requierd.validationRule-meta.xml
<ValidationRule>
    <fullName>ClientAgent_field_is_Requierd</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
(Create_Inquiry__c = TRUE),
ISBLANK( Client_Agent__c )
)</errorConditionFormula>
    <errorMessage>Client/Agent field is required.</errorMessage>
</ValidationRule>