force-app/main/default/objects/CIF__c/validationRules/Fill_Mobile_or_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_Mobile_or_Email</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISBLANK( Mobile__c ),
 ISBLANK( E_MAIL__c )  
 )</errorConditionFormula>
    <errorMessage>Please Fill Mobile Or Email.</errorMessage>
</ValidationRule>