force-app/main/default/objects/CIF__c/validationRules/If_CIF_Type_is_AGENCY_BRIEFING.validationRule-meta.xml
<ValidationRule>
    <fullName>If_CIF_Type_is_AGENCY_BRIEFING</fullName>
    <active>true</active>
    <description>If CIF type is AGENCY BRIEFING then please fill the following fields.</description>
    <errorConditionFormula>AND(
ISPICKVAL(CIF_Type__c, &quot;AGENCY BRIEFING&quot;),
OR(
(AND(
ISBLANK(x3rd_Party_Agency_Name__c),
ISBLANK( Client_Agent__c  )
)),
(AND(
ISBLANK(x3rd_Party_Agent_Email__c),
ISBLANK(x3rd_Party_Agent_Mobile__c)
)),
ISBLANK(x3rd_Party_Agent_Name__c)
)
)</errorConditionFormula>
    <errorMessage>PLEASE FILL ALL THE FIELDS MENTIONED IN THE AGENCY REQUIRED DETAILS SECTION.</errorMessage>
</ValidationRule>