force-app/main/default/objects/CIF__c/validationRules/If_CIF_type_is_DIRECT_BUYER.validationRule-meta.xml
<ValidationRule>
    <fullName>If_CIF_type_is_DIRECT_BUYER</fullName>
    <active>true</active>
    <description>If CIF type is DIRECT BUYER the please fill the following fields</description>
    <errorConditionFormula>AND(
    ISPICKVAL(CIF_Type__c, &quot;DIRECT BUYER&quot;),
    OR(
        ISBLANK(NAME_OF_THE_OWNER__c),
        (AND(
            ISBLANK(Mobile__c),
            ISBLANK(E_MAIL__c)
			)),
        ISBLANK(TEXT(CIF_Lead_Source__c))
    )
)</errorConditionFormula>
    <errorMessage>PLEASE FILL ALL THE FIELDS MENTIONED IN THE BUYER REQUIRED DETAILS SECTION.</errorMessage>
</ValidationRule>