force-app/main/default/objects/CIF__c/validationRules/Mobile_number_should_be_number_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_number_should_be_number_only</fullName>
    <active>true</active>
    <description>Mobile number contains number,+,- only</description>
    <errorConditionFormula>AND( 
NOT(ISBLANK(Mobile__c  )),
NOT(REGEX(Mobile__c  , &quot;^(?=.*?[1-9])[0-9\\-\\+]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Mobile number format incorrect.</errorMessage>
</ValidationRule>