force-app/main/default/objects/CIF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CIF_Type__c</columns>
    <columns>Inquiry__c</columns>
    <columns>Community__c</columns>
    <columns>Project__c</columns>
    <columns>Sub_Community__c</columns>
    <columns>User_Generated_CIF__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_To_Create__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>