force-app/main/default/objects/CIF__c/listViews/Call_Center_CIF.listView-meta.xml
<ListView>
    <fullName>Call_Center_CIF</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>User_Generated_CIF__c</columns>
    <columns>E_MAIL__c</columns>
    <columns>How_Would_You_Like_Us_To_Contact_You__c</columns>
    <filterScope>Everything</filterScope>
    <label>Call Center</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>