force-app/main/default/objects/CIF__c/listViews/CIF_Type_Agency_Buyer.listView-meta.xml
<ListView>
    <fullName>CIF_Type_Agency_Buyer</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <columns>NAME_OF_THE_OWNER__c</columns>
    <columns>E_MAIL__c</columns>
    <columns>x3rd_Party_Agency_Name__c</columns>
    <columns>User_Generated_CIF__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CIF_Type__c</field>
        <operation>equals</operation>
        <value>AGENCY BUYER</value>
    </filters>
    <label>CIF Type Agency Buyer</label>
</ListView>